--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -16,6 +16,7 @@
         <ul>
             <a href="{% url 'home' %}"><li><i class="fas fa-home"></i>Bosh sahifa</li></a>
             <a href="{% url 'about' %}"><li><i class="fas fa-address-card"></i>Biz haqimizda</li></a>
+            <a href="{% url 'news_home' %}"><li><i class="fas fa-address-card"></i>Yangiliklar</li></a>
             <a href="{% url 'contact' %}"><li><i class="fab fa-telegram-plane"></i>Biz bilan bog`lanish</li></a>
         </ul>
     </aside>
